tools: Fix an incorrect g_new() call

It was allocating an array of guint8 pointers, rather than an array of
guint8s. This resulted in an allocation 4 times too large, which is a
bug, but not one which would cause crashes.

Coverity ID: 1398303

https://bugzilla.gnome.org/show_bug.cgi?id=777833